added auth endpoints and configured springSecurity in backend